SPECS/genome-Sce.spec.in
#$Id: genome-Sce.spec.in,v 1.5 2006/08/30 02:38:03 allenday Exp $
Summary: S. cerevisiae genome sequence in FASTA format from SGD S228C (Oct 1 2003) release.
Name: genome-Sce
Version: S228C
Epoch: 0
Release: %{revision}.%{distro}
Source0: saccharomyces_cerevisiae.gff.tar.gz
Source1: Sce_gff.pl
License: Custom
Group: Bioinformatics/Sequence
Packager: Allen Day <allenday@ucla.edu>
URL: http://www.genome.ucsc.edu
BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
#Icon: 
BuildArch: noarch
BuildRequires: ucsc >= 456-1, perl-bioperl, biopackages, ncbi, ncbi-ePCR

%description
Yeast data from SGD

%package nib
Summary: S. cerevisiae genome sequence in NIB format from SGD 228C (Oct 1 2003) release.
Group: Bioinformatics/Sequence
BuildArch: noarch
BuildRequires: ucsc >= 456-1, perl-bioperl, biopackages, ncbi, ncbi-ePCR

%description nib
Yeast genome sequence converted to NIB format for use with BLAT, for instance.

%package annotation-gene
Summary: S. cerevisiae gene annotations
Group: Bioinformatics/Data
BuildArch: noarch
BuildRequires: ucsc >= 456-1, perl-bioperl, biopackages, ncbi, ncbi-ePCR

%description annotation-gene
Yeast annotation-gene annotations

%package blast
Summary: S. cerevisiae genome sequence in BLAST format from SGD 228C (Oct 1 2003) release.
Group: Bioinformatics/Sequence
BuildArch: noarch
BuildRequires: ucsc >= 456-1, perl-bioperl, biopackages, ncbi, ncbi-ePCR

%description blast
Yeast genome sequence converted to BLAST format.

%package ePCR
Summary: S. cerevisiae genome sequence in rePCR format from SGD 228C (Oct 1 2003) release.
Group: Bioinformatics/Sequence
BuildArch: noarch
BuildRequires: ucsc >= 456-1, perl-bioperl, biopackages, ncbi, ncbi-ePCR

%description ePCR
Yeast genome sequence converted to ePCR format.

%prep
%setup -c genome-Sce

mkdir -p %{buildroot}%{_datadir}/genome/Sce/%{version}/ePCR
mkdir -p %{buildroot}%{_datadir}/genome/Sce/%{version}/fa
mkdir -p %{buildroot}%{_datadir}/genome/Sce/%{version}/nib
mkdir -p %{buildroot}%{_datadir}/genome/Sce/%{version}/gff
mkdir -p %{buildroot}%{_datadir}/blast

%build
#make gff file
cat saccharomyces_cerevisiae.gff | grep -E '^(chr|#)' | grep -v '##FASTA' | gzip > gff-Sce-gene.gff.gz

#make .fa files
cat saccharomyces_cerevisiae.gff | grep -vE '^(chr|#)' | grep -v '##FASTA' | perl -MBio::SeqIO -e '$i=Bio::SeqIO->new(-fh=>\*STDIN,-format=>'fasta'); while($s = $i->next_seq){warn $s->primary_id;open(S,"| fold > ".$s->primary_id.".fa"); print S ">".$s->primary_id."\n".$s->seq;close(S)}'

#make .nib files
for i in *.fa ; do %{_bindir}/faToNib $i ${i/.fa/.nib} ; done

#make blast files
cat *.fa > chrall.fa ; formatdb -t %{name}-%{version} -n %{buildroot}%{_datadir}/blast/%{name}-%{version} -i chrall.fa -p F
chmod 444 %{buildroot}%{_datadir}/blast/*
chmod 755 %{buildroot}%{_datadir}/blast

#make ePCR files
famap -tN -b %{buildroot}%{_datadir}/genome/Sce/%{version}/ePCR/chrall.famap *.fa

%install

for i in *.fa ; do install -m 444 $i %{buildroot}%{_datadir}/genome/Sce/%{version}/fa ; done
for i in *.nib ; do install -m 444 $i %{buildroot}%{_datadir}/genome/Sce/%{version}/nib ; done
install -m 444 gff-Sce-gene.gff.gz %{buildroot}%{_datadir}/genome/Sce/%{version}/gff

find %{buildroot} -type f -name '*.fa'     | sed "s@^%{buildroot}@%dir @g" >> %{name}-%{version}-%{release}-filelist
find %{buildroot} -type f -name '*.famap'  | sed "s@^%{buildroot}@%dir @g" >> %{name}-%{version}-%{release}-ePCR-filelist
find %{buildroot} -type f -name '*.fahash' | sed "s@^%{buildroot}@%dir @g" >> %{name}-%{version}-%{release}-ePCR-filelist
find %{buildroot} -type f -name '*.nib'    | sed "s@^%{buildroot}@%dir @g" >> %{name}-%{version}-%{release}-nib-filelist
find %{buildroot} -type f -name '*.gff.gz' | sed "s@^%{buildroot}@%dir @g" >> %{name}-%{version}-%{release}-gene-filelist
find %{buildroot}%{_datadir}/blast -type f | sed "s@^%{buildroot}@%dir @g" >> %{name}-%{version}-%{release}-blast-filelist

%files -f %{name}-%{version}-%{release}-filelist
%defattr(-,root,root)

%files ePCR -f %{name}-%{version}-%{release}-ePCR-filelist
%defattr(-,root,root)

%files nib -f %{name}-%{version}-%{release}-nib-filelist
%defattr(-,root,root)

%files annotation-gene -f %{name}-%{version}-%{release}-gene-filelist
%defattr(-,root,root)

%files blast -f %{name}-%{version}-%{release}-blast-filelist
%defattr(-,root,root)

%clean
[ "${RPM_BUILD_ROOT}" != "/" ] && [ -d ${RPM_BUILD_ROOT} ] && rm -rf ${RPM_BUILD_ROOT};

%post 

%preun 

%post ePCR
fahash -b %{_datadir}/genome/Sce/%{version}/ePCR/chrall.fahash -w 12 -f3 %{_datadir}/genome/Sce/%{version}/ePCR/chrall.famap

%preun ePCR
rm -f %{_datadir}/genome/Sce/%{version}/ePCR/chrall.fahash

$Log: genome-Sce.spec.in,v $
Revision 1.5  2006/08/30 02:38:03  allenday
cannot do fahash in rpm build -- moved to %post and %preun :(

Revision 1.4  2006/08/30 02:34:15  allenday
cannot do fahash in rpm build -- moved to %post and %preun :(

Revision 1.3  2006/08/30 02:18:58  allenday
fixed s/// error

Revision 1.2  2006/08/30 02:11:05  allenday
hash was internally referencing buildroot

Revision 1.1  2006/08/29 23:54:30  allenday
import genome package.  added ePCR dep

